@@ -10,6 +10,9 @@ Version 2.7
   advertised.
 - Fixed filesizeformat.
 - Added a non-silent option for babel extraction.
+- Added `urlescape` filter that automatically quotes values for
+  URL safe usage with utf-8 as only supported encoding.  If applications
+  want to change this encoding they can override the filter.
 
 Version 2.6
 -----------
